--- a/frontend/src/components/button/button.css
+++ b/frontend/src/components/button/button.css
@@ -1,4 +1,4 @@
-.back-button {
+/* .back-button {
   padding: 10px;
   align-content: center;
   border-radius: 15px;
@@ -14,8 +14,8 @@ button:hover {
 
 .setting-long-button {
   display: block;
-  padding: 1.5%; /*changed by Faraz*/
-  width: 100%; /*changed by Faraz*/
+  padding: 1.5%;
+  width: 100%;
   max-height: 100%;
   border-radius: 50px;
   border: none;
@@ -27,7 +27,7 @@ button:hover {
 
 .setting-long-button:hover {
   box-shadow: 0px 8px 8px rgba(96, 252, 253, 0);
-}
+} */
 
 .setting-btn-icon:hover {
   box-shadow: 2px 14px 8px rgba(0, 0, 0, .8);
